# ecommerce_analysis_shiny_app

./: README.md
instacart_analysis/: .env.example  .gitignore  README.md  app.py  db_optimizations.sql  hello.py  pyproject.toml  requirements.txt
instacart_analysis/sql/: queries.py
instacart_analysis/src/: database_setup.py  download_instacart.py
instacart_analysis/www/: custom.css
